AC_INIT([libspooky], [1.0.0], [bugs@d3fy.net])
AC_PREREQ(2.68)
AC_CONFIG_SRCDIR([include/spooky.h])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIR([build])

AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects])

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_AR

LT_INIT

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
